[gd_scene load_steps=3 format=3 uid="uid://cfclia06coxq3"]

[ext_resource type="Script" path="res://scenes/dialogs/custom_confirm_dialog/custom_confirm_dialog.gd" id="1_fabvi"]

[sub_resource type="StyleBoxEmpty" id="1"]

[node name="CustomConfirmDialog" type="PanelContainer" node_paths=PackedStringArray("_ok_button", "_cancel_button")]
offset_right = 472.0
offset_bottom = 250.0
script = ExtResource("1_fabvi")
_ok_button = NodePath("VBoxContainer/HBoxContainer/OKButton")
_cancel_button = NodePath("VBoxContainer/HBoxContainer/CancelButton")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LabelTitle"
text = "Are you sure?"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("1")

[node name="Body" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_type_variation = &"Text"
bbcode_enabled = true
text = "This file will be deleted."
scroll_active = false

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 2

[node name="OKButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "OK"

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/OKButton" to="." method="_on_OKButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
